--- a/README.org
+++ b/README.org
@@ -1,10 +1,13 @@
 * Evedel: Instructed LLM Programmer/Assistant
 
-*This is a fledgling project. Expect lots of bugs and missing features.*
+#+begin_quote
+[!WARNING]
+*This is a fledgling project. Expect bugs, missing features, and API instability.*
+#+end_quote
 
 [[file:media/promo.png]]
 
-Evedel is an extension to the [[https://github.com/karthink/gptel][GPTel]] Emacs package that enhances the workflow of interacting with large language models during programmer. Its primary aim is to shift workload from manually writing code to creating detailed, thoughtful instruction labels for the LLM models, leveraging references to provide contextual understanding of the working environment.
+Evedel is an Emacs package that adds a workflow for interacting with LLMs during programming. Its primary goal is to shift workload from manually writing code to creating detailed, thoughtful instruction annotations in the source files for LLM models, leveraging them as indexed references to provide them with contextual understanding of the working environment.
 
 Evedel is versatile enough so that it can be utilized in various types of buffers, and isn't limited to just programming buffers.
 
@@ -12,7 +15,7 @@ Evedel is versatile enough so that it can be utilized in various types of buffer
 
 [[file:media/complex-labeling-example.png]]
 
-- Uses [[https://github.com/karthink/gptel][GPTel]] as a backend, so no extra setup is necessary if you already use it.
+- Uses [[https://github.com/karthink/gptel][gptel]] as a backend, so no extra setup is necessary if you already use it.
 - Uses overlays for tracking instructions instead of raw text, which means that the instructions are not part of your file or buffer. The overlays are mostly intuitive and can be customized, and try not to interfere with the regular Emacs workflow.
 - Can save your instruction overlays so you won't have to restart the instruction labeling process every time you start a new Emacs session.
 - Can categorize your references with tags, and use complex query expressions to determine what to sent to the model in directives.
@@ -23,7 +26,7 @@ Evedel is versatile enough so that it can be utilized in various types of buffer
 :CUSTOM_ID: requirements
 :END:
 
-- [[https://github.com/karthink/gptel][GPTel]]
+- [[https://github.com/karthink/gptel][gptel]]
 - Emacs version 29.1 or higher
 
 ** Usage
@@ -58,7 +61,7 @@ Below is an example of scaling existing instruction overlay (in this case, a ref
 |-----------------------------------+---------------------------------------------------------|
 | =evedel-save-instructions=        | Save current instruction overlays to a specified file.  |
 | =evedel-load-instructions=        | Load instruction overlays from a specified file.        |
-| =evedel-process-directives=       | Process directives by sending them to GPTel.            |
+| =evedel-process-directives=       | Process directives by sending them to gptel.            |
 | =evedel-convert-instructions=     | Convert between reference and directive types at point. |
 | =evedel-instruction-count=        | Return the number of instructions currently loaded.     |
 | =evedel-preview-directive-prompt= | Preview directive prompt at the current point.          |
@@ -75,16 +78,17 @@ Here's an example of previewing a directive prompt:
 
 *** Navigation
 
-|-------------------------------+-------------------------------------------------------|
-| Command                       | Command Description                                   |
-|-------------------------------+-------------------------------------------------------|
-| =evedel-next-instruction=     | Cycle through instructions in the forward direction.  |
-| =evedel-previous-instruction= | Cycle through instructions in the backward direction. |
-| =evedel-next-reference=       | Cycle through references in the forward direction.    |
-| =evedel-previous-reference=   | Cycle through references in the backward direction.   |
-| =evedel-next-directive=       | Cycle through directives in the forward direction.    |
-| =evedel-previous-directive=   | Cycle through directives in the backward direction.   |
-|-------------------------------+-------------------------------------------------------|
+|--------------------------------------+-------------------------------------------------------------|
+| Command                              | Command Description                                         |
+|--------------------------------------+-------------------------------------------------------------|
+| =evedel-next-instruction=            | Cycle through instructions in the forward direction.        |
+| =evedel-previous-instruction=        | Cycle through instructions in the backward direction.       |
+| =evedel-next-reference=              | Cycle through references in the forward direction.          |
+| =evedel-previous-reference=          | Cycle through references in the backward direction.         |
+| =evedel-next-directive=              | Cycle through directives in the forward direction.          |
+| =evedel-previous-directive=          | Cycle through directives in the backward direction.         |
+| =evedel-cycle-instructions-at-point= | Cycle through instructions at the point, highlighting them. |
+|--------------------------------------+-------------------------------------------------------------|
 
 *** Categorization
 
@@ -102,6 +106,12 @@ The categorization system in allows you to use tags to label and organize refere
 
 You can also modify the tag query for a directive, which is a way to filter and search for references by tags. The tag query uses an infix notation system, allowing complex expressions with the operators =and=, =or=, and =not=. For example, the query =signature and function and doc= means the directive should match references tagged with =signature=, =function=, and =doc=. You may use parentheses in these expressions.
 
+Additionally, there are special meta tag symbols that have exclusive meanings:
+- =is:bufferlevel=: Returns only references that contain the entire buffer.
+- =is:tagless=: Returns references with no tags whatsoever.
+- =is:directly-tagless=: Returns references which may have inherited tags, but no tags of their own.
+- =is:subreference=: Returns references which have another reference as their parent.
+
 |-------------------------------------------+------------------------------------------------------|
 | Custom Variable                           | Description                                          |
 |-------------------------------------------+------------------------------------------------------|
@@ -115,6 +125,8 @@ You can also modify the tag query for a directive, which is a way to filter and 
 
 *** Customization
 
+**** Colors
+
 |-------------------------------------------+---------------------------------------------------|
 | Custom Variable                           | Description                                       |
 |-------------------------------------------+---------------------------------------------------|
@@ -126,20 +138,22 @@ You can also modify the tag query for a directive, which is a way to filter and 
 | =evedel-instruction-bg-tint-intensity=    | Intensity for instruction background tint         |
 | =evedel-instruction-label-tint-intensity= | Intensity for instruction label tint              |
 | =evedel-subinstruction-tint-intensity=    | Coefficient for adjusting subinstruction tints    |
-| =evedel-descriptive-mode-roles=           | Major modes to model roles association list       |
 |-------------------------------------------+---------------------------------------------------|
 
-Please refer to the custom variable documentation within the package for a more comprehensive description.
+**** Miscellaneous
 
-*** Instruction Persistence
+|--------------------------------------+------------------------------------------------------------------|
+| Custom Variable                      | Description                                                      |
+|--------------------------------------+------------------------------------------------------------------|
+| =evedel-descriptive-mode-roles=      | Alist mapping major modes to model roles association list        |
+| =evedel-patch-outdated-instructions= | Automatically patch instructions when the save file is outdated. |
+|--------------------------------------+------------------------------------------------------------------|
 
-If you have added instructions to your files and saved them, make sure to load them before resuming work on your project. Failing to do so, and loading them after making changes to your files, will lead to mismatched instruction overlays.
-
-To alleviate this until something more established is added, you could consult the project's [[file:.dir-locals.el]] to see how auto-saving/loading is done in the project.
+The variable =evedel-patch-outdated-instructions= controls the automatic patching of instructions during loading when the save file is outdated. The process is not perfect (word-wise diff), so you should always try and maintain a separate instruction file per branch.
 
 ** Setup
 
-Before proceeding, make sure you have [[https://github.com/karthink/gptel][GPTel]] configured (see [[#requirements][requirements]]). *This package will not work without it.*
+Before proceeding, make sure you have [[https://github.com/karthink/gptel][gptel]] configured (see [[#requirements][requirements]]). *This package will not work without it.*
 Clone the Evedel repository:
 
 #+begin_src sh
@@ -149,56 +163,67 @@ git clone https://github.com/daedsidog/evedel.git
 Add the path to the cloned repository in your Emacs configuration. You can do this by adding the following code to your =init.el= or =config.el= file:
 
 #+begin_src emacs-lisp
-(add-to-list 'load-path "/path/to/evedel")
-
-Use =use-package= to configure Evedel as shown in the snippet below:
-
-#+begin_src emacs-lisp
-(use-package evedel
-  :config
-  (customize-set-variable 'evedel-empty-tag-query-matches-all nil)
-  :bind (("C-c e r" . evedel-create-reference)
-         ("C-c e d" . evedel-create-directive)
-         ("C-c e s" . evedel-save-instructions)
-         ("C-c e l" . evedel-load-instructions)
-         ("C-c e p" . evedel-process-directives)
-         ("C-c e m" . evedel-modify-directive)
-         ("C-c e k" . evedel-delete-instructions)
-         ("C-c e c" . evedel-convert-instructions)
-         ("C->"     . evedel-next-instruction)
-         ("C-<"     . evedel-previous-instruction)
-         ("C-c e t" . evedel-add-tags)
-         ("C-c e T" . evedel-remove-tags)
-         ("C-c e D" . evedel-modify-directive-tag-query)
-         ("C-c e P" . evedel-preview-directive-prompt)))
+:bind (("C-c e r" . evedel-create-reference)
+       ("C-c e d" . evedel-create-directive)
+       ("C-c e s" . evedel-save-instructions)
+       ("C-c e l" . evedel-load-instructions)
+       ("C-c e p" . evedel-process-directives)
+       ("C-c e m" . evedel-modify-directive)
+       ("C-c e k" . evedel-delete-instructions)
+       ("C-c e c" . evedel-convert-instructions)
+       ("C->"     . evedel-next-instruction)
+       ("C-<"     . evedel-previous-instruction)
+       ("C-."     . evedel-cycle-instructions-at-point)
+       ("C-c e t" . evedel-add-tags)
+       ("C-c e T" . evedel-remove-tags)
+       ("C-c e D" . evedel-modify-directive-tag-query)
+       ("C-c e P" . evedel-preview-directive-prompt))
 #+end_src
 
 Make sure to replace ="/path/to/evedel"= with the actual path where you cloned the Evedel repository.
 
 ** Planned Features
 
-- [ ] Instruction navigation
-  - *[X] Basic cyclic navigation between instruction across buffers*
-  - [ ] Reference navigation based on a tag query
-- [ ] Categorization
-  - *[X] Reference tags*
-  - *[X] Filter references via tag query when sending directives*
-  - [ ] Tag autocompletion when writing directive tag query
-- [ ] Interface
-  - [ ] Auto-saving/loading. For now, you can consult the [[file:.dir-locals.el]] file that I use for the project to see how I handle automatic saving/loading of instructions for it.
-  - [ ] Persistence with version controls, e.g. switching branches should not mess up the instructions.
-  - [ ] Preservation of sub-instructions returned as part of a successful directive
-  - [ ] Instruction undoing/redoing history
-  - [ ] Better/more precise instruction selection resolution for tightly nested instructions
-- [ ] Documentation
-  - *[X] Ability to preview directive to be sent*
-  - [ ] Instruction help tool-tips
-- [ ] Directive tools
-  - [ ] Sequential execution of dependent directives
-  - [ ] Interactive directive result diff, i.e. being able to tell the model what to correct.
+Mark indicates previously planned features that have been implemented.
+
+*** Instruction Navigation
+
+- *[X] Basic cyclic navigation between instruction across buffers*
+- [ ] Reference navigation based on a tag query
+
+*** Reference Management
+
+- *[X] Reference categorization via tags*
+- *[X] Filter references via tag query when sending directives*
+- [ ] Tag autocompletion when writing directive tag query
+- [ ] Windows references: describe to the model the contents of a particular Emacs window.
+- [ ] Whole-Emacs references: describe to the model the entire status of the Emacs session.
+- [ ] Reference commentary
+
+*** Directive Management
+
+- [ ] Sequential execution of dependent directives
+- [ ] Interactive directive result diff & extra procedures
+- [ ] Automatic RAG
+  
+*** Interface
+
+- [ ] Auto-saving/loading
+- *[X] Persistence with version controls, e.g. switching branches should not mess up the instructions [1].*
+- [ ] Preservation of sub-instructions returned as part of a successful directive
+- [ ] Instruction undoing/redoing history
+- [ ] Better/more precise instruction selection resolution for tightly nested instructions
+
+[1] While the current patching is able to fix outdated instructions pretty accurately, it is still a better idea to maintain a separate save file for each branch. This feature solves the problem where even the most minor change in the file completely broke the overlay structure.
+
+*** Documentation
+  
+- *[X] Ability to preview directive to be sent*
+- [ ] Instruction help tool-tips
 
 ** Acknowledgments
 
-- Special thanks to [[https://github.com/karthink][Karthik Chikmagalur]] for the excellent [[https://github.com/karthink/gptel][GPTel]] package
+- Special thanks to [[https://github.com/karthink][Karthik Chikmagalur]] for the excellent [[https://github.com/karthink/gptel][gptel]] package
 
-#  LocalWords:  LLM Evedel DWIM Evedel's GPTel evedel backend untagged autocomplete autocompletion
+#  LocalWords:  LLM Evedel DWIM Evedel's gptel evedel backend untagged autocomplete autocompletion
+#  LocalWords:  LLMs VC
